# regex-comparison

./: COMPARISSON.md  Cargo.toml  README.md  benchmark.sh  calling_rust.py  pyproject.toml  re_compiled.py  re_non_compiled.py  re_rust.py  re_sub.py
src/: lib.rs  main.rs  reg_default.rs  reg_non_default.rs
