[package]
name = "regex_comparison"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "regex_comparison"
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.12.2"
once_cell = "1.18.0"
regex-automata = "0.4.13"
pyo3 = "0.27.2"
