[project]
name = "regex-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flpc>=0.2.5",
    "reru==0.2.0",
    "rure>=0.2.2",
]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
# Tells uv to install dependencies but NOT the project itself
package = false
